# rust-hacking

./: Cargo.toml  bun.lockb  listing_0038_many_register_mov  listing_0041_add_sub_cmp_jnz.asm  listing_0041_add_sub_cmp_jnz.out.asm  listing_41_out.asm  package.json  readme.md  test.ts
benches/: query_transformation.rs
listings/: listing_0041_add_sub_cmp_jnz  listing_0041_add_sub_cmp_jnz.asm  listing_0041_add_sub_cmp_jnz.out.asm
proptest-regressions/: lib.txt
src/: decoder.rs  lib.rs  main.rs  query_transformation.rs
